Arreglos en depositos

--- a/src/app/deposit/deposit-pesos/deposit-pesos.component.css
+++ b/src/app/deposit/deposit-pesos/deposit-pesos.component.css
@@ -1,4 +1,8 @@
 .cuadros {
-    border-radius: 5px;
-    width: 210px;
+  border-radius: 5px;
+  width: 210px;
+}
+
+.information {
+  text-align: justify !important;
 }
