--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -8,8 +8,7 @@
     <hr />
     <h4 style="font-weight: 300">Elegí la moneda que vas a ingresar</h4>
 
-    <body class="text-center">
-      <section class="text-center" id="headingOne">
+      <section id="headingOne">
         <button
           class="btn"
           data-bs-toggle="collapse"
@@ -32,7 +31,7 @@
         </div>
       </section>
 
-      <section class="text-center" id="headingTwo">
+      <section id="headingTwo">
         <button
           class="btn"
           data-bs-toggle="collapse"
@@ -55,6 +54,5 @@
           </div>
         </div>
       </section>
-    </body>
   </div>
 </div>
