--- a/src/app/deposit/deposit-dolares/deposit-dolares.component.html
+++ b/src/app/deposit/deposit-dolares/deposit-dolares.component.html
@@ -8,7 +8,7 @@
       </p>
       <p>Podés ingresar hasta 10.000 USD <a>¿Cómo funcionan los limites?</a></p>
     </div>
-    <div class="card-body text-primary">
+    <div class="information card-body text-primary">
       <div class="card-text">
         <div>
           <p>
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="card mb-3">
+  <div class="information card mb-3">
     <div class="card-body text-primary">
       <div class="card-text">
         <div>
