--- a/src/app/deposit/deposit.component.css
+++ b/src/app/deposit/deposit.component.css
@@ -14,10 +14,7 @@
   padding: 5%;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-}
-
-body {
-  padding-top: 3%;
+  text-align: center;
 }
 
 .card-body {
@@ -27,10 +24,21 @@ body {
 .btn {
   font-weight: 500;
   font-size: 20px;
-  width: 50%;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   width: 25%;
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin-top: 5%;
+  margin-bottom: 2%;
+}
+
+@media screen and (max-width: 1040px) {
+  .slidenav {
+    display: none;
+  }
+  .wrapper {
+    display: flex;
+  }
+  .btn {
+    width: 100%;
+  }
 }
