--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -26,6 +26,7 @@
   margin: 20px;
   border-radius: 20px;
   padding: 50px;
+  height: 80vh;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -88,6 +89,7 @@ button {
   box-sizing: border-box;
   width: 100%;
   border-radius: 5px;
+  margin-top: 2%;
 }
 
 .text-left {
