--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,7 +16,9 @@
 
       <mat-step required errorMessage="E-mail is required.">
         <form>
-          <h3>Ingresa tu e-mail</h3>
+          <h3 class="card-title">
+            <span> Ingresa tu correo electronico </span>
+          </h3>
           <p>Te enviaremos un mensaje para confirmarlo.</p>
           <section>
             <div>E-mail</div>
