--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -20,7 +20,7 @@ body {
 
 form {
   padding-top: 10px;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 form button {
@@ -48,9 +48,9 @@ form button {
 
 .login-form {
   width: 480px;
-  margin: 20px;
   border-radius: 20px;
-  padding: 50px;
+  padding: 25px;
+  height: 80vh;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
