--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -7,12 +7,8 @@
       <app-balance></app-balance>
     </div>
     <!-- Box B -->
-    <div class="box large">
+    <div id="movements" class="box large">
       <app-movements></app-movements>
-    </div>
-    <!-- Box C -->
-    <div style="padding-top: 5%" class="box">
-      <app-facturas></app-facturas>
     </div>
   </div>
 </body>
