arreglos varios haciendo responsive los componentes

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,5 +1,4 @@
 <app-left-nav-bar></app-left-nav-bar>
-
 <body>
   <div class="container">
     <!-- Box A -->
@@ -7,7 +6,7 @@
       <app-balance></app-balance>
     </div>
     <!-- Box B -->
-    <div id="movements" class="box large">
+    <div id="movements" class="box">
       <app-movements></app-movements>
     </div>
   </div>
