--- a/src/app/left-nav-bar/left-nav-bar.component.css
+++ b/src/app/left-nav-bar/left-nav-bar.component.css
@@ -1,35 +1,25 @@
-
-
 .hidden {
   display: none;
-}
-
-.buttons,
-a {
-  color: white;
-  text-decoration: none;
 }
 
 mat-nav-list {
   background-color: #00b3a6;
   color: white !important;
-  padding: 15%;
+  padding-top: 7%;
+  padding-right: 15% !important;
   height: 100vh;
 }
 
 mat-nav-list li {
-  margin-bottom: 23%;
+  margin-bottom: 17%;
+  margin-top: 17%;
   list-style: none; /* quita los estilos por defecto de lista */
-}
-
-a {
-  text-decoration: none;
-  color: white !important;
 }
 
 .title {
   font-weight: 500;
-  margin-left: 15%;
+  margin-left: 25%;
+  padding-top: 5%;
   cursor: pointer;
 }
 
