--- a/src/app/operations/operations.component.css
+++ b/src/app/operations/operations.component.css
@@ -1,11 +1,3 @@
-.wrapper {
-  display: grid;
-  grid-template-columns: 230px 1000px;
-  grid-gap: 30px;
-  background-color: #fff;
-}
-
-.slidenav {
-  background-color: #00b3a6;
-  padding: 10%;
+.container {
+  padding-left: 20%;
 }
