--- a/src/app/retiros/retiros.component.css
+++ b/src/app/retiros/retiros.component.css
@@ -4,18 +4,7 @@ body {
   width: 850px;
   margin: 0 auto;
   height: 400px;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: 230px 100px;
-  grid-gap: 30px;
-  background-color: #fff;
-}
-
-.slidenav {
-  background-color: #00b3a6;
-  padding: 10%;
+  padding-left: 20%;
 }
 
 #titulo {
