--- a/src/app/retiros/retiros.component.html
+++ b/src/app/retiros/retiros.component.html
@@ -1,13 +1,13 @@
 <app-left-nav-bar></app-left-nav-bar>
-
-<div class="cuerpo">
+<body class="cuerpo">
+<div>
   <div id="titulo">Retiros</div>
   <hr class="line" />
   <div id="withdrawals">
     puedes optar por retirar a tu cuenta bancaria o retirar en cajero mediante
     punto efectivo con tu número de dni y teléfono celular.
   </div>
-  <body>
+
     <div>
       <div id="accordion">
         <div class="card2">
@@ -62,9 +62,10 @@
           </div>
         </div>
       </div>
-      <div>
-        <button class="nxt-button">Continuar</button>
-      </div>
     </div>
-  </body>
+ </div>
+ <div>
+  <button class="nxt-button">Continuar</button>
 </div>
+</body>
+
