--- a/src/app/retiros/retiros.component.html
+++ b/src/app/retiros/retiros.component.html
@@ -1,5 +1,5 @@
 <app-left-nav-bar></app-left-nav-bar>
-<body class="cuerpo">
+<body>
 <div>
   <div id="titulo">Retiros</div>
   <hr class="line" />
@@ -64,8 +64,8 @@
       </div>
     </div>
  </div>
- <div>
-  <button class="nxt-button">Continuar</button>
-</div>
+ <div class="suportbtn">
+ <div><button class="nxt-button" routerLink="/retiros/amountretir" routerLinkActive="active">Continuar</button></div>
+ </div>
 </body>
 
