--- a/src/app/retiros/retiros.component.css
+++ b/src/app/retiros/retiros.component.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: roboto;
   line-height: 30px;
@@ -9,8 +8,25 @@ body {
   margin-top: 5%;
   padding-left: 2%;
   padding-top: 1%;
+  padding-bottom: 2%;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+}   
+
+.nxt-button {
+  position: relative;
+  left: 70%;
+  list-style: none;
+  width: 210px;
+  height: 40px; 
+  background: #6200ee;
+  border-radius: 100px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  color: #ffffff;   
 }
 
 #titulo {
@@ -41,34 +57,18 @@ body {
   margin-bottom: 4%;
   margin-left: 1%;
 }
+
 .card2 {
   background: #f2e7fe;
   border-radius: 5px;
   margin-bottom: 2%;
-  margin-right: 14%;
+  margin-right: 7%;
 }
+
 .card-body {
   position: relative;
   background: #faf5fe;
   margin-bottom: 1px;
-}
-
-.nxt-button {
-  position: relative;
-  margin-left: 500px;
-  list-style: none;
-  width: 210px;
-  height: 40px;
-  background: #6200ee;
-  border-radius: 100px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 26px;
-  color: #ffffff;
-  margin-bottom: 3%;
-  
 }
 
 .btn {
@@ -105,9 +105,6 @@ body {
   .nxt-button {
     position: relative;
     margin-left: 4%;
-  }
-  .cuerpo {
-    width: auto;
   }
 }
 
