--- a/src/app/operations/operations.component.html
+++ b/src/app/operations/operations.component.html
@@ -1,5 +1,10 @@
 <app-left-nav-bar></app-left-nav-bar>
 
-<div class="container">
-  <router-outlet></router-outlet>
+<div class="container p-5">
+    <router-outlet></router-outlet>
 </div>
+
+
+
+    
+
