padding left a transfer

--- a/src/app/operations/transfer/transfer.component.html
+++ b/src/app/operations/transfer/transfer.component.html
@@ -1,3 +1,4 @@
+<body>
 <div>
   <app-stepper #stepper>
     <!-- Paso 1 -->
@@ -218,3 +219,4 @@
     </cdk-step>
   </app-stepper>
 </div>
+</body>
