--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,10 +1,5 @@
 form{
     border-radius: 10px;
-    min-height: 470px;
-}
-
-thead{
-    font-size: smaller;
 }
 
 thead > tr > td:nth-child(1){
@@ -14,6 +9,7 @@ thead > tr > td:nth-child(1){
 thead > tr > td{
     text-align: center;
     border-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 tbody > tr > td:nth-child(1){
