--- a/src/app/left-nav-bar/left-nav-bar.component.html
+++ b/src/app/left-nav-bar/left-nav-bar.component.html
@@ -7,7 +7,8 @@
     [opened]="(isHandset$ | async) === false"
   >
     <mat-nav-list>
-      <h1 routerLink="/" routerLinkActive="active" class="title">Waled</h1>
+      <img src="..\..\assets\WALED LOGO.png" class="title" routerLink="/" routerLinkActive="active">
+      <!--<h1 routerLink="/" routerLinkActive="active" class="title">Waled</h1> por las dudas lo dejo acá-->
       <ul>
         <hr />
         <li>
